--- a/.git_ignore
+++ b/.git_ignore
@@ -1,4 +1,8 @@
 coverage
-*.json
-
-assets
+coverage/
+/coverage.data
+/coverage/
+coverage/assets/0.12.3
+.last_run.json
+.resultset.json
+resultset.json.lock
